--- a/1.html
+++ b/1.html
@@ -149,7 +149,7 @@
         </div>
         <div class="col-md-6 ">
           <div class="img-box">
-            <img  style="width: 70%;" src="images/ehe.png" alt="">
+            <img  style="width: 70%;" src="7.jpg" alt="">
           </div>
         </div>
 
