--- a/3.html
+++ b/3.html
@@ -147,7 +147,7 @@
         </div>
         <div class="col-md-6 ">
           <div class="img-box">
-            <img  style="width: 70%;" src="images/ehe.png" alt="">
+            <img  style="width: 70%;" src="3.jpg" alt="">
           </div>
         </div>
 
