--- a/4.html
+++ b/4.html
@@ -146,7 +146,7 @@
         </div>
         <div class="col-md-6 ">
           <div class="img-box">
-            <img  style="width: 70%;" src="images/ehe.png" alt="">
+            <img  style="width: 100%;" src="6.jpg" alt="">
           </div>
         </div>
 
