--- a/7.html
+++ b/7.html
@@ -150,7 +150,7 @@
         </div>
         <div class="col-md-6 ">
           <div class="img-box">
-            <img  style="width: 70%;" src="images/ehe.png" alt="">
+            <img  style="width: 70%;" src="5.jpg" alt="">
           </div>
         </div>
 
