--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-livesites">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="">
+              <img src="https://event-organizer-services-500.framer.ai/" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="https://event-organizer-services-500.framer.ai/" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                
               </div>
             </div>
