--- a/index.html
+++ b/index.html
@@ -282,7 +282,18 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
 
-             <div class="resume-item">
+<div class="resume-item">
+              <h4>IT - Technical Support Representative | MOTOSTRADA </h4>
+              <h5>2025 - Present </h5>
+              <p><em>11th ave, Grace Park East 1403 Caloocan City, Metro Manil</em></p>
+              <ul>
+                <li>Development of Administrative System overseeing operations of all departments.</li>
+                <li>Handling technical documentations, that is of vital importance towards the corporation.</li>
+              </ul>
+            </div>
+             
+
+<div class="resume-item">
               <h4>Professor | STI College Caloocan </h4>
               <h5>2025 - 2025</h5>
               <p><em>109 Samson Rd., Caloocan city</em></p>
