--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 <div class="resume-item">
               <h4>IT - Technical Support Representative | MOTOSTRADA </h4>
               <h5>2025 - Present </h5>
-              <p><em>11th ave, Grace Park East 1403 Caloocan City, Metro Manil</em></p>
+              <p><em>11th ave, Grace Park East 1403 Caloocan City, Metro Manila</em></p>
               <ul>
                 <li>Development of Administrative System overseeing operations of all departments.</li>
                 <li>Handling technical documentations, that is of vital importance towards the corporation.</li>
