--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+63 905 127 5400</p>
+                <p>+63 930-341-2561</p>
               </div>
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61744.46079728758!2d120.9751316!3d14.710963450000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b3f2c352666b%3A0x9af8d2dfa797d58!2sValenzuela%2C%20Metro%20Manila!5e0!3m2!1sen!2sph!4v1692378195437!5m2!1sen!2sph"  frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
               
@@ -463,7 +463,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="https://formsubmit.co/mail.lesterfrancisco@gmail.com" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
