--- a/index.html
+++ b/index.html
@@ -366,10 +366,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-livesites">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/winmetal.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="https://ninetynineresortsph.com/" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+               
+              </div>
+            </div>
+          </div>
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-livesites">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/ninenine.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="https://event-organizer-services-500.framer.ai/" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                
