--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-livesites">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/winmetal.png" class="img-fluid" alt="">
+              <img src="images/ninenine.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="https://ninetynineresortsph.com/" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                
