--- a/index.html
+++ b/index.html
@@ -224,6 +224,12 @@
             <h3 class="resume-title">Education</h3>
 
             <div class="resume-item">
+              <h4>Juris Doctor Degree (Incomplete)</h4>
+              <h5>2024 - 2025</h5>
+              <p><em>Arellano University School of Law</em></p>
+              
+            </div>
+            <div class="resume-item">
               <h4>Bachelor of Science in Computer Engineering</h4>
               <h5>2019 - 2023</h5>
               <p><em>STI College Caloocan</em></p>
@@ -539,5 +545,6 @@
 </body>
 
 </html>
+
 
 
