--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-livesites">
             <div class="portfolio-wrap">
-              <img src="images/ninenine.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/ninenine.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="https://ninetynineresortsph.com/" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                
@@ -384,7 +384,7 @@
 
            <div class="col-lg-4 col-md-6 portfolio-item filter-livesites">
             <div class="portfolio-wrap">
-              <img src="images/red.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/red.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="https://redentertainment-rentals.com/" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                
@@ -545,6 +545,7 @@
 </body>
 
 </html>
+
 
 
 
